F1CSS v1.4.4 - FIX - Modal CSS: Undo `overflow:hidden` change.

--- a/modal/modal.css
+++ b/modal/modal.css
@@ -3,22 +3,21 @@
  *  
  * @author  C. Moller <xavier.tnc@gmail.com>
  * 
- * @version 1.1.0 - 25 Nov 2022
- *   - Change .modal => overflow-y:auto to overflow:hidden
+ * @version 1.1.1 - FIX - 06 Dec 2022
+ *   - Undo overflow:hidden change.
  *
  */
 
 .modal {
 	visibility: hidden;
-	overflow: hidden;
 	position: fixed;
-	/*overflow-y: auto;*/
+	overflow: auto; /* important! */
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	z-index: 100;
 	opacity: 0;	
 }
@@ -63,6 +62,6 @@
 @media only screen and (min-width: 520px) and (orientation: landscape) {
 	.has-modal {
 		overflow: hidden;
-		padding-right: var(--scrollbar-width, 0);
+/*		padding-right: var(--scrollbar-width, 0);*/
 	}
 }
